# XChat-C--

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  app_8cpp.html  app_8cpp.js  app__windows_8h.html  app__windows_8h.js  app__windows_8h_source.html  chat_8cpp.html  chat__connection_8cpp.html  chat__connection_8h.html  chat__connection_8h.js  chat__connection_8h_source.html  classChatInput.html  classChatInput.js  classChatWindow.html  classChatWindow.js  classClickableLabel.html  classClickableLabel.js  classClient.html  classClient.js  classClientConnection.html  classClientConnection.js  classLoginWindow.html  classLoginWindow.js  classMessage.html  classMessage.js  classServerConnection.html  classServerConnection.js  classes.html  client_2src_2main_8cpp.html  client_8cpp.html  client_8h.html  client_8h.js  client_8h_source.html  client__connection_8cpp.html  (+44 more)
.github/workflows/: CMake-build-client.yml  CMake-build-server.yml  Docker-ghpackages-publish.yml  Docker-publish-client.yml  Docker-publish-server.yml  Doxygen-deploy.yml  codeql.yml
client/: .dockerignore  CMakeLists.txt  Dockerfile
client/include/: app_windows.h  chat_connection.h  client.h  custom_qelements.h  message.h  server_connection.h
client/src/: app.cpp  chat.cpp  chat_connection.cpp  client.cpp  client_connection.cpp  custom_qelements.cpp  login.cpp  main.cpp  menu.cpp
client/tests/: CMakeLists.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  pages_2.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  (+5 more)
server/: CMakeLists.txt  Dockerfile  go.mod  go.sum  main.go
server/app/: mongodb.go
server/models/: Chat.go  Data.go  Message.go  User.go
server/tests/: CMakeLists.txt
server/utils/: EnvVariables.go  ListFind.go  LoadChat.go
